--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,39 @@
-asgiref==3.8.1
-certifi==2025.1.31
+asgiref==3.7.2
+bleach==6.2.0
+blinker==1.9.0
+certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.1
-cryptography==44.0.1
+click==8.1.8
+cloudinary==1.36.0
+colorama==0.4.6
+crispy-bootstrap5==0.7
+cryptography==44.0.0
 defusedxml==0.7.1
 dj-database-url==0.5.0
-Django==4.2.19
-django-allauth==0.57.2
+dj3-cloudinary-storage==0.0.6
+Django==4.2.7
+django-allauth==0.57.0
+django-crispy-forms==2.1
+django-summernote==0.8.20.0
+Flask==3.1.0
 gunicorn==20.1.0
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
 oauthlib==3.2.2
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pycparser==2.22
-PyJWT==2.10.1
+PyJWT==2.8.0
 python3-openid==3.2.0
 requests==2.32.3
-requests-oauthlib==2.0.0
+requests-oauthlib==1.3.1
 setuptools==75.8.0
-sqlparse==0.5.3
-tzdata==2025.1
-urllib3==2.3.0
+six==1.17.0
+sqlparse==0.4.4
+tzdata==2024.2
+urllib3==1.26.18
+webencodings==0.5.1
+Werkzeug==3.1.3
+whitenoise==5.3.0
