--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==4.2.19
 django-allauth==0.57.2
+django-cors-headers==3.14.0
 gunicorn==20.1.0
 idna==3.10
 oauthlib==3.2.2
