--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.8.1
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+cloudinary==1.42.2
 cryptography==44.0.1
 defusedxml==0.7.1
 dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==4.2.19
 django-allauth==0.57.2
 django-cors-headers==3.14.0
@@ -18,6 +20,7 @@ python3-openid==3.2.0
 requests==2.32.3
 requests-oauthlib==2.0.0
 setuptools==75.8.0
+six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.1
 urllib3==2.3.0
